Getting ready for Heroku

--- a/app/bin/main/templates/compute.mustache
+++ b/app/bin/main/templates/compute.mustache
@@ -1,9 +1,10 @@
 <title>My Application</title>
 <h1>Test Page</h1>
-Result is {{result}}
+Result is {{result}} {{xyz}} {{obj.x}}
 
 <form action="compute" method="post">
     <textarea name="input1" rows="10" cols="10"> </textarea>
+    <textarea name="input2" rows="10" cols="10"> </textarea>
     <br>
     <input type="submit">
 </form>
