--- a/app/src/main/resources/templates/compute.mustache
+++ b/app/src/main/resources/templates/compute.mustache
@@ -1,10 +1,22 @@
-<title>My Application</title>
-<h1>Test Page</h1>
-Result is {{result}} {{xyz}} {{obj.x}}
+<head>
+    <meta charset = "utf-8" />
+        
+    <!-- add icon link -->
+    <link rel = "icon" href = "https://i.hizliresim.com/nrs3vu9.png" 
+    type = "image/x-icon">
+        
+</head>
+
+<title>WEB SAYFAM</title>
+<h1>Test Sayfasi</h1>
+<br>
+INPUT LIST  _|_  NUMBER
 
 <form action="compute" method="post">
     <textarea name="input1" rows="10" cols="10"> </textarea>
     <textarea name="input2" rows="10" cols="10"> </textarea>
     <br>
+    Result is {{result}} {{xyz}} {{obj.x}}
+    <br> <br>
     <input type="submit">
 </form>
